--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "@types/react-native": "^0.72.0",
     "expo": "~51.0.28",
     "expo-font": "~12.0.9",
+    "expo-image-picker": "~15.0.7",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-native": "0.74.5",
+    "react-native-dropdown-picker": "^5.4.6",
     "react-native-paper": "4.9.2",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
