--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "react-native": "0.74.5",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-paper": "4.9.2",
+    "react-native-picker-select": "^9.3.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
-    "react-native-svg": "15.2.0"
+    "react-native-svg": "15.2.0",
+    "expo-file-system": "~17.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
